# private-hdac-core

./: .build.sh.swp  .gitignore  build.sh  configure.ac  makeUploadPackage.sh  private-hdac-stream.creator.user.4.8-pre1  private-hdac-stream.files  private-hdac-stream.includes  release-private.txt  release-public.txt  remoteupload.sh  versionInfo
depends/: funcs.mk
depends/hosts/: linux.mk
doc/: static-build.md
src/: Makefile.am
src/chain/: chain.h  epow.cpp  epow.h  pow.cpp  txmempool.cpp  txmempool.h
src/chainparams/: buildgenesis.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  globals.h  paramlist.h  params.cpp  params.h  state.h
src/core/: init-cold.cpp  init.cpp  init.h  main.cpp  main.h
src/cust/: custhdac.h
src/entities/: asset.cpp  asset.h
src/hdac/: hdac-cli.cpp  hdac-util.cpp  hdac.h  hdacd-cold.cpp  hdacd.cpp
src/json/: json_spirit_ubjson.cpp
src/miner/: miner.cpp  miner.h
src/net/: net.cpp  net.h
src/permissions/: permission.cpp  permission.h
src/primitives/: block.cpp  block.h  transaction.h
src/protocol/: handshake.cpp  hdacblock.cpp  hdacscript.cpp  hdacscript.h  hdactx.cpp  netprotocol.cpp  netprotocol.h
src/rpc/: rpcassets.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcdump.cpp  rpcexchange.cpp  rpchelp.cpp  rpclist-cold.cpp  rpclist.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcpermissions.cpp  rpcprotocol.cpp  rpcprotocol.h  rpcrawtransaction.cpp  rpcserver.cpp  rpcserver.h  rpcstreams.cpp  rpcupgrades.cpp  (+7 more)
tests/stream-noti-rec/: CMakeLists.txt  FindZmqpp.cmake  main.cpp
(+57 files in other folders)
